# mandelbrot-GPU

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
include/glad/: glad.h
src/: glad.c  main.cpp  shader.h
src/shaders/: mandelbrotshader.fs  mandelbrotshader.vs
